frontend/test/should_pass/object_001.grg
using object_model_001;

rule test1 {
    a:A -x:e-> b:A;
    if { b.obj == x.obj; }

    modify {
        eval {
            a.obj = b.obj;
        }
    }
}
