frontend/test/should_fail/object_002.grg
using object_model_001;

rule test1 {
    a:A -x:e-> b:A;
    if { 
        b.obj == x.obj; 
	}

    modify {
        eval {
            a.obj = null;
            e.val = (int)a.obj;
        }
    }
}
